website-new/style.css
html,
body {
  display: flex;
  flex-direction: column;
  align-self: center;
  align-items: center;
  flex: 1;
  width: 100%;
  height: auto;
  padding-bottom: 2%;
  font-family: system-ui, Ubuntu, sans-serif;
  font-weight: bold;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  cursor: default;
  color: black;
  text-decoration: none;
  font-size: calc(5pt + 0.5vw);
}
header {
  font-size: calc(10pt + 1vw);
  display: flex;
  width: 90%;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  padding: 1vw 1vw;
  cursor: default;
  color: black;
  font-weight: normal;
}
.top-bar {
  font-size: calc(10pt + 0.5vw);
  font-family: system-ui, Ubuntu, sans-serif;
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
  padding: 0 1vw;
  gap: 1vw;
  height: 100%;
  width: 100%;
  cursor: default;
  color: rgb(122, 122, 122);
}
.selected {
  color: black;
  font-weight: bold;
}
.logo {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  padding: 1vw 1vw;
  width: 3vw;
  min-width: 50px;
  height: auto;
}
a {
  color: inherit;
  text-decoration: none;
}
img {
  width: 100%;
  height: auto;
  border-radius: 5%;
}
.intro {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 6vw;
  padding: 1vw 1vw;
  cursor: default;
  color: black;
  font-size: 4vw;
}
.intro-text {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  cursor: default;
  color: black;
}
.intro-buttons {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 2.5vw;
  cursor: default;
  color: black;
}
.footer {
  width: 100%;
  height: auto;
  position: fixed;
  left: 0;
  bottom: 0;
  background-color: rgb(255, 255, 255);
  color: #5e6971;
  text-align: center;
  font-weight: normal;
}

.picture {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  cursor: default;
  color: black;
  text-decoration: none;
  color: white;
  width: 28vw;
  height: auto;
  
}
.blue-button {
  padding: 0.2vw 2vw;
  cursor: pointer;
  color: white;
  background-color: #1777e5;
  border-radius: 0.3vw;
  font-size: calc(5pt + 0.5vw);
  font-family: inherit;
  font-weight: inherit;
}
.blue-button:hover {
  background-color: #0f6cd6;
}
.grey-button {
  padding: 0.2vw 2vw;
  cursor: pointer;
  background-color: #e2e2e2;
  border-radius: 0.3vw;
  font-size: calc(5pt + 0.5vw);
  font-family: inherit;
  font-weight: inherit;
}
.grey-button:hover {
  background-color: #c4c4c4;
}
.blurb-box {
  display: flex;
  position: relative;
  align-self: center;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 1vw;
  padding: 1vw 1vw;
  cursor: default;
  color: black;
  width: 70%;
  height: auto;
  border-radius: 1vw;
  background: #ffffff;
  box-shadow:  5px 5px 10px #666666, -5px -5px 10px #ffffff;
}
.blurb-text {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: left;
  cursor: default;
  color: black;
  font-weight: normal;
  width: 40%;
}
.blurb-text h1 {
  font-size: calc(10pt + 1vw);
  font-weight: bold;
}
.blurb-image {
  width: 10vw;
  height: auto;
  border-radius: 5%;
}
.spacer {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  align-self: center;
  gap: 1vw;
  padding: 1vw 0;
  cursor: default;
  color: black;
  width: 5%;
}
.tools-box.spacer{
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  align-self: center;
  gap: 1vw;
  padding: 1vw 0;
  cursor: default;
  color: black;
  width: 5%;
}
.text-with-blue-line::before {
  content: "";
  display: inline-block;
  vertical-align: middle;
  width: 1vw; 
  border-top: .14vw solid #1777e5;
  margin-right: 10px;
  font-size: calc(17pt+0.5vw);
}
.text-with-orange-line::before {
  content: "";
  display: inline-block;
  vertical-align: middle;
  width: 1vw; 
  border-top: .14vw solid #ff5f49;
  margin-right: 10px;
  font-size: calc(17pt+.5vw);
}
.text-with-green-line::before {
  content: "";
  display: inline-block;
  vertical-align: middle;
  width: 1vw; 
  border-top: .14vw solid #2db24a;
  margin-right: 10px;
  font-size: calc(17pt+.5vw);
}
.skills-box {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-self: center;
  vertical-align: top;
  padding-top: 5%;
  cursor: default;
  color: black;
  width:80%;
  height: auto;
}
.education{
  align-self: center;
  align-items: flex-start;
  display: flex;
  flex-direction:  row;
  vertical-align: top;
  width: 49%;
}
.education text{
  flex-direction: column;
}
.education-text{
  flex-direction: column;
  padding-left: 6%;
}
.work{
  align-self: center;
  align-items: flex-start;
  display: flex;
  flex-direction:  row;
  vertical-align: top;
  width: 100%;
}
.work-text{
  flex-direction: column;
  padding-left: 2%;
  width: 20%;
}
.education super{
  font-size: calc(5pt + 0.25vw);
  color: #1777e5;
}
.work super{
  font-size: calc(5pt + 0.25vw);
  color: #ff5f49;
}
.education sub{
  font-size: calc(5pt + 0.25vw);
  color: #666a71;
}
.work sub{
  font-size: calc(5pt + 0.25vw);
  color: #666a71;
}
.education p{
  font-size: calc(10pt + 0.5vw);
}
.work p{
  font-size: calc(10pt + 0.5vw);
}
.tools{
  display: flex;
  flex-direction: column;
  width: 80%;
  justify-content: center;
  align-items: left;
  vertical-align: top;
  padding-top: 5%;
  cursor: default;
  color: black;
  height: auto;
}
.tool-images{
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  vertical-align: top;
  gap: 1vw;
  padding-left: 5%;
  cursor: default;
  color: black;
  height: auto;
}
.tool-images img{
  width: auto;
  height: 5vw;
  border-radius: 5%;
}
.tools-box {
  display: flex;
  position: relative;
  align-self: center;
  text-align: center;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  cursor: default;
  color: black;
  box-shadow: 0vw 0vw 0.5vw 0.1vw rgba(0, 0, 0, 0.1);
  width: 10vw;
  height: 10vw;
  border-radius: .5vw;
  border-radius: 1vw;
  background: #ffffff;
  box-shadow:  5px 5px 10px #666666, -5px -5px 10px #ffffff;
}
.tools-box p{
  font-size: calc(5pt + 0.3vw);
}
/*Add this snippet to mobile.css*/
.certifications{
  display: flex;
  flex-direction: column;
  width: 80%;
  justify-content: center;
  align-items: center;
  vertical-align: top;
  padding-top: 5%;
  cursor: default;
  color: black;
  height: auto;
}
.certification-title{
  width: 30%;
  padding-left: 2%;
  padding-right: 2%;
}
.certs-row{
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  vertical-align: top;
  padding-top: 5%;
  cursor: default;
  color: black;
  height: auto;
}
.certs-row super{
  font-size: calc(5pt + 0.25vw);
  color: #1777e5;
  gap: 1vw;
}
.certs-row p{
  font-size: calc(10pt + 0.5vw);
}
.certs-row text{
  flex-direction: column;
}
.certs-col{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  vertical-align: top;
  gap: 1vw;
  padding-left: 5%;
  cursor: default;
  color: black;
  height: auto;
}
.personal-projects{
  display: flex;
  flex-direction: column;
  width: 80%;
  justify-content: center;
  align-self: center;
  align-items: center;
  vertical-align: top;
  padding-top: 5%;
  cursor: default;
  color: black;
  height: auto;
}
.personal-projects box{
  display: flex;
  flex-direction: row;
  justify-content: center; /* This will center the items horizontally */
  align-items: flex-start; /* This will align the items to the top */
  width: 100%;
  cursor: default;
  color: black;
  height: auto;
  gap: 2%;
}

.personal-projects individual{
  display: flex;
  flex-direction: column;
  justify-content: center; /* This will center the items horizontally */
  align-items: flex-start; /* This will align the items to the top */
  width: 30%;
  cursor: default;
  color: black;
  height: auto;
}
.personal-projects sub{
  font-size: calc(8pt + 0.25vw);
  color: #666a71;
  font-weight: normal;
}
.personal-projects img{
  width: 100%;
  height: 15vw;
  object-fit: cover;
  border-radius: 5%;
  outline: black;
  outline-width: 1px;
  outline-style: solid;
}
.portfolio{
  display: flex;
  flex-direction: column;
  width: 80%;
  justify-content: center;
  align-items: center;
  vertical-align: top;
  padding-top: 5%;
  cursor: default;
  color: black;
  height: auto;
}
.portfolio box{
  display: flex;
  flex-direction: column;
  justify-content: center; /* This will center the items horizontally */
  align-items: flex-start; /* This will align the items to the top */
  width: 100%;
  cursor: default;
  color: black;
  height: auto;
  gap: 2%;
}
.portfolio h1{
  font-size: calc(10pt + 2vw);
  font-weight: bold;
}
.portfolio img{
  width: 100%;
  height: 26vw;
  object-fit: cover;
  border-radius: 5%;
  outline: black;
  outline-width: 1px;
  outline-style: solid;
}
.portfolio p{
  font-size: calc(10pt + 0.5vw);
  color: #666a71;
}.portfolio item{
  display: flex;
  flex-direction: row;
  justify-content: center; /* This will center the items horizontally */
  align-items: flex-start; /* This will align the items to the top */
  width: 50%;
  cursor: default;
  color: black;
  height: auto;
  gap: 2%;
}
.portfolio sub{
  font-size: calc(8pt + 0.25vw);
  color: #666a71;
  font-weight: normal;
}
.portfolio row{
  display: flex;
  flex-direction: row;
  justify-content: center; /* This will center the items horizontally */
  align-items: flex-start; /* This will align the items to the top */
  width: 100%;
  cursor: default;
  color: black;
  height: auto;
  gap: 2%;
}

